--- a/package.json
+++ b/package.json
@@ -30,5 +30,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.4.1",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   }
 }
