--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "vouch-coding-challenge",
+  "name": "study-hall",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
@@ -32,10 +36,11 @@
     ]
   },
   "devDependencies": {
-    "boostrap": "^2.0.0",
     "bootstrap": "^4.4.1",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
-  }
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
+  },
+  "proxy": "http://localhost:3001"
 }
